# markdown-browser

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/: preview.html
examples/: front-matter.md  showcase.md
src/: lib.rs  main.rs
src/cli/: ansi.rs  keymap.rs  mod.rs  net.rs  preview.rs  render.rs  source.rs  tui.rs
src/render/: anchor.rs  block.rs  highlight.rs  image.rs  inline.rs  link.rs  mod.rs  parse.rs  style.rs  table.rs  theme.rs  width.rs
tests/: preview_sse.rs
