[package]
name = "markdown-browser"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A terminal markdown browser with first-class GFM table rendering"
repository = "https://github.com/m5d215/markdown-browser"
authors = ["m5d215"]

[dependencies]
clap = { version = "4.6", features = ["derive"] }
comrak = { version = "0.52", default-features = false }
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
unicode-width = "0.2"
