[package]
name = "markdown-browser"
version = "0.2.1"
edition = "2024"
license = "MIT"
description = "A terminal markdown browser with first-class GFM table rendering"
repository = "https://github.com/m5d215/markdown-browser"
authors = ["m5d215"]
readme = "README.md"
keywords = ["markdown", "terminal", "tui", "viewer", "browser"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
arboard = { version = "3.6", default-features = false }
clap = { version = "4.6", features = ["derive"] }
comrak = { version = "0.52", default-features = false, features = ["shortcodes"] }
crossterm = "0.29"
notify = "8"
open = "5"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "parsing", "regex-fancy"] }
unicode-segmentation = "1"
unicode-width = "0.2"
ureq = "3"
url = "2"
